--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Get in touch
-subtitle: Any questions or remarks? Ideas? Please let us know!
+subtitle: Any questions or remarks? Ideas? Comments? Please let us know!
 permalink: /contact/
 image: /img/backgrounds/ordina.png
 ---
@@ -13,17 +13,13 @@ image: /img/backgrounds/ordina.png
         </a>
 
         <div class="content">
-            <h2 class="major">About Ordina JWorks</h2>
+            <h2 class="major">About Digital Avenue</h2>
 
             <p>
-                Want to develop a new Java solution? Or modify your existing Java applications? Our consultants and
-                teams build innovative solutions with Java and JavaScript. To support them in that mission, we have
-                several <b>Competence Centers</b>. From within those Competence Centers, we provide coaching to the employee
-                and expert advice towards our customer. In order to keep in sync with the latest technologies and the
-                latest trends, we frequently visit <b>conferences</b> around the globe.
+                The digital Avenue sole purpose is providing a comprehensive knowledge in Howtos, Tutorials, Guides, Tech Comparison and much more in the fast moving tech world. Digital Avenue empowers you the vast knowledge in the Information Technology Industry. You can learn Software Development, System Engineering, Latest IT News, Career Development Ideas, Tech Products Comparisons and much more. We are moving forward to contribute technical knowledge on both Linux and Windows platforms.
             </p>
 
-            <a href="https://www.ordina.be/en/competences/java/" class="special" target="_blank">Learn more</a>
+            <a href="https://www.facebook.com/digitalavenuelk/" class="special" target="_blank">Learn more</a>
         </div>
     </div>
 </section>
@@ -34,30 +30,67 @@ image: /img/backgrounds/ordina.png
             <div class="features">
                 <article>
                     <a href="#" class="image article-image">
-                        <img src="/img/contact/wonne-keysers.jpg" alt="">
+                        <img src="/img/author/dimuthu-ruwan.jpg" alt="">
                     </a>
 
-                    <h3 class="major">Wonne Keysers</h3>
-                    <h5>Business Unit Manager</h5>
+                    <h3 class="major">Dimuthu Daundasekara</h3>
+                    <h5>Linux Systems Engineer</h5>
 
                     <ul class="contact">
-                        <li class="fa-phone"><a href="tel:+32476226330">+32 476 22 63 30</a></li>
-                        <li class="fa-envelope"><a href="mailto:Wonne.Keysers@ordina.be">Wonne.Keysers@ordina.be</a>
-                        </li>
-                    </ul>
-                </article>
-                <article>
-                    <a href="#" class="image article-image">
-                        <img src="/img/contact/anja-van-acker.jpg" alt="">
-                    </a>
 
-                    <h3 class="major">Anja Van Acker</h3>
-                    <h5>Resource Manager</h5>
 
-                    <ul class="contact">
-                        <li class="fa-phone"><a href="tel:+32479071885">+32 479 07 18 85</a></li>
-                        <li class="fa-envelope"><a href="mailto:Anja.VanAcker@ordina.be">Anja.VanAcker@ordina.be</a>
-                        </li>
+   <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Social Media Icons With Font Awesome</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+ <div class="col-xs-12 text-center">
+            <ul class="list-inline col-xs-12">
+                  <li><a href="https://www.youtube.com/channel/UCovlVsoRVItner26ZJPBjmQ/featured?view_as=subscriber"><i class="fa fa-youtube-square fa-4x"></i></a></li>     
+                  <li><a href="https://www.linkedin.com/in/dimuthu-daundasekara-2b002271/"><i class="fa fa-linkedin fa-4x"></i></a></li>
+                  <li><a href="https://www.facebook.com/digitalavenuelk"><i class="fa fa-facebook fa-4x"></i></a></li>
+                  <li><a href="https://twitter.com/DigitalAvenue2/"><i class="fa fa-twitter-square fa-4x"></i></a></li>
+            </ul>
+
+
+<style>
+.social-media-icons ul {
+    list-style: none;
+    padding: 0;
+    text-align: center;
+}
+
+.social-media-icons a { 
+    display: inline-block;
+    text-decoration: none;
+    padding: 7px;
+}
+
+.social-media-icons a:nth-child(1) i {
+    color: #d34836;
+}
+
+.social-media-icons a:nth-child(2) i {
+    color: #4099FF;
+}
+
+.social-media-icons a:nth-child(3) i {
+    color: #b31217;
+}
+
+.social-media-icons a:nth-child(4) i {
+    color: #FF6600;
+}
+
+.social-media-icons a i:hover{
+    color: black;
+}
+</style>
+
+
+
                     </ul>
                 </article>
             </div>
@@ -68,8 +101,8 @@ image: /img/backgrounds/ordina.png
     <div class="inner">
         <div class="content">
           <h2 class="major">Our Offices</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11930.778171031287!2d4.452728774910801!3d51.05055534635598!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3e59d34246183%3A0x12ea838e4c02816e!2sOrdina+Belgium+Mechelen!5e0!3m2!1snl!2sus!4v1447107404641"
-                    width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=welivita%20junct&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><span style="font-size:12px;">Werbung: <a href="https://www.jetzt-drucken-lassen.de">jetzt-drucken-lassen.de</a></span><a href="https://www.embedgooglemap.net/elegantthemes/" class="lic" rel="nofollow">Divi. The Ultimate WordPress Theme.</a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.lic{position:absolute;z-index:999;bottom:-14px;right:0;font-size:11px;font-family:arial;color:#666;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
         </div>
     </div>
 </section>
+
