--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@ show_logo: true
 transparent_header: true
 ---
 
+# Google Site Verification
+<meta charset="utf-8">
+<meta name="google-site-verification=qKIepgVfzSjcseO976kK4sD1NfV8NUlc3eYal6GV0Fo" />
+# Google Site Verification
+
 <section id="one" class="wrapper spotlight style1">
     <div class="inner">
         <div class="content" style="text-align: left">
