--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@ transparent_header: true
 ---
 
 # Google Site Verification
-<meta charset="utf-8">
-<meta name="google-site-verification=0Z2PPTan7sbpNrEBPz_u65ZRgZ3Vr6Vy15ySUXN6Fmc" />
+<meta name="google-site-verification" content="rX80efOvSS4vHZoe_fsa-JiHFZbYYM2C-i-ka3qusZw" />
 # Google Site Verification
 
 <section id="one" class="wrapper spotlight style1">
