--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@ show_logo: true
 transparent_header: true
 ---
 
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="google-site-verification" content="oMW08c5_7JrOPMkkYu_EuMOnRNwGTbAHGIFQ9newbRE" />
+</head>
+
 <section id="one" class="wrapper spotlight style1">
     <div class="inner">
         <div class="content" style="text-align: left">
@@ -98,3 +105,4 @@ transparent_header: true
         </div>
     </div>
 </section>
+
